--- a/primeapp/Makefile
+++ b/primeapp/Makefile
@@ -4,3 +4,5 @@ coverage:
 	go test -coverprofile=coverage.out
 coverage-html:
 	make coverage && go tool cover -html=coverage.out
+test-suite:
+	go test -v -run $(suite)
